# cmake_practice

./: .gitignore  README.md
demo1/: CMakeLists.txt  main.cc
demo2/: CMakeLists.txt  MathFunctions.cc  MathFunctions.h  main.cc
demo3/: CMakeLists.txt  main.cc
demo3/math/: CMakeLists.txt
demo4/: CMakeLists.txt  main.cc
demo4/math/: MathFunctions.cc  MathFunctions.h
